--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "chromedriver": "^130.0.4",
+    "cors": "^2.8.5",
     "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
