--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
-    "chromedriver": "^130.0.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
-    "jsdom": "^25.0.1",
-    "puppeteer": "^23.11.1",
-    "puppeteer-core": "^10.4.0"
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "puppeteer": "^23.11.1"
   }
 }
